--- a/WinDbgExtension/WinDbgExtension.csproj
+++ b/WinDbgExtension/WinDbgExtension.csproj
@@ -85,7 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command.cs" />
+    <Compile Include="MyCommand.cs" />
     <Compile Include="DebugEngineStream.cs" />
     <Compile Include="Exports.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
